--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AngularJS WorkShop",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall" : "node_modules/.bin/bower install"
   },
   "repository": "",
   "author": " <florian.mithieux@gmail.com>",
