--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "WorkShop",
-  "version": "0.0.0",
-  "description": "AngularJS WorkShop",
-  "main": "index.html",
-  "scripts": {
-    "postinstall" : "node_modules/.bin/bower install"
-  },
-  "repository": "",
+  "name": "AngularBoilerplate",
+  "description": "Quick Front-End Boilerplate using AngularJS, Sass and Gulp.",
+  "copyright": "2014",
+  "version": "1.0.0",
   "author": " <florian.mithieux@gmail.com>",
   "license": "BSD",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/Argetloum/AngularBoilerplate.git"
+  },
   "devDependencies": {
     "gulp": "~3.4.0",
     "gulp-concat": "~2.1.7",
@@ -21,5 +21,8 @@
     "gulp-rename": "^1.1.0",
     "gulp-watch": "^0.5.0",
     "gulp-notify": "^1.0.0-beta"
+  },
+  "scripts": {
+    "postinstall" : "node_modules/.bin/bower install"
   }
 }
