--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.1.0",
     "gulp-watch": "^0.5.0",
-    "gulp-notify": "^1.0.0-beta"
+    "gulp-notify": "^1.0.0-beta",
+    "jshint-stylish": "~0.1.5"
   },
   "scripts": {
-    "postinstall" : "node_modules/.bin/bower install"
+    "postinstall": "node_modules/.bin/bower install"
   }
 }
