--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   },
   "devDependencies": {
     "bower": "~1.2.6",
-    "gulp": "~3.4.0",
+    "gulp": "~3.8.5",
     "gulp-concat": "~2.1.7",
     "gulp-uglify": "~0.2.1",
     "gulp-imagemin": "~0.1.5",
     "gulp-jshint": "~1.5.0",
     "gulp-sass": "~0.7.1",
-    "gulp-bower-files": "^0.1.11",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.1.0",
     "gulp-watch": "^0.5.0",
     "gulp-notify": "^1.0.0-beta",
+    "gulp-concat-css": "~0.1.3",
+    "gulp-coffee": "~1.4.1",
+    "gulp-util": "~2.2.14",
     "jshint-stylish": "~0.1.5"
   },
   "scripts": {
